# dobot_nova2_ros2_driver

./: .gitignore  Makefile  README.md
docs/superpowers/plans/: 2026-07-22-handeye-calibration.md  2026-07-24-handeye-package-and-tf-cleanup.md
src/dobot_camera/: package.xml  setup.cfg  setup.py
src/dobot_camera/launch/: gemini305.launch.py
src/dobot_description/: CMakeLists.txt  package.xml
src/dobot_description/urdf/: nova2_robot.urdf
src/dobot_handeye/: package.xml  setup.cfg  setup.py
src/dobot_handeye/dobot_handeye/: handeye_board_tf.py  handeye_capture.py  handeye_check.py  handeye_diagnose.py  handeye_solve.py  handeye_tf.py  handeye_validate.py
src/dobot_interfaces/: CMakeLists.txt  package.xml
src/dobot_interfaces/msg/: DobotState.msg  GripperStatus.msg
src/dobot_interfaces/srv/: GetJointState.srv  GetRobotState.srv  GetTcpPose.srv  GripperCommand.srv  GripperState.srv  JogCommand.srv  MoveCommand.srv  TrajectoryCommand.srv  TrajectoryList.srv
src/dobot_joy/: package.xml  setup.cfg  setup.py
src/dobot_joy/dobot_joy/: joy_common.py  joy_teleop.py
src/dobot_joy/launch/: joy_teleop.launch.py
src/dobot_joy/test/: test_joy_common.py  test_joy_package.py
src/dobot_keyboard/: package.xml  setup.cfg  setup.py
src/dobot_keyboard/dobot_keyboard/: keyboard_common.py  keyboard_input.py  keyboard_teleop.py
src/dobot_keyboard/launch/: keyboard_teleop.launch.py
src/dobot_keyboard/test/: test_keyboard_common.py  test_keyboard_package.py
src/dobot_ros2/: dobot_api.py  package.xml  setup.cfg  setup.py
src/dobot_ros2/config/: dobot_ros2.yaml
src/dobot_ros2/dobot_ros2/: __init__.py  control_console.py  controller.py  driver_node.py  gripper.py  handeye_board_tf.py  handeye_capture.py  handeye_check.py  handeye_common.py  handeye_diagnose.py  handeye_solve.py  handeye_tf.py  handeye_validate.py
src/dobot_ros2/launch/: dobot_bringup.launch.py  dobot_control_console.launch.py  dobot_driver.launch.py  dobot_visualization.launch.py
src/dobot_ros2/rviz/: nova2.rviz
src/dobot_ros2/test/: test_bringup_and_makefile.py  test_handeye_tools.py  test_joint_movej_service_name.py
src/dobot_ros2/web/: app.js  index.html  styles.css
