<?xml version="1.0"?>
<package format="3">
  <name>dobot_camera</name>
  <version>0.1.0</version>
  <description>Launch wrappers for cameras used with Dobot workspaces.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>orbbec_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
