<?xml version="1.0"?>
<package format="3">
  <name>dobot_description</name>
  <version>0.1.0</version>
  <description>Dobot Nova2 URDF and mesh resources.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>urdf</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
