<?xml version="1.0"?>
<package format="3">
  <name>dobot_keyboard</name>
  <version>0.1.0</version>
  <description>Keyboard teleoperation tools for Dobot ROS2 workspaces.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>dobot_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
